@@ -84,6 +84,7 @@ dillo-fltk2
  - Added the multipart/form-data encoding method to form submission.
  - Fixed a bug in Html_parse_entity.
  - Fixed a bug in a_Url_cmp.
+ - Fixed a bug in Cookies_parse_one. Set it to a single return potint too!
    Patches: place
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
